--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=friendsapp.db"
-  }
+  },
+  "TokenKey": "super secret unguessable key1234566798786 lksdjfioejeflksdajfiejflsdjfkjelijfkl"
 }
